--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "@embroider/compat": "^0.47.2",
     "@embroider/core": "^0.47.2",
     "@embroider/webpack": "^0.47.2",
+    "@fullhuman/postcss-purgecss": "^4.1.3",
     "@glimmer/component": "^1.0.4",
     "@glimmer/tracking": "^1.0.4",
+    "autoprefixer": "^10.4.0",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
     "ember-auto-import": "^1.11.3",
@@ -39,6 +41,7 @@
     "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-htmlbars": "^5.7.1",
     "ember-cli-inject-live-reload": "^2.1.0",
+    "ember-cli-postcss": "^7.0.2",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.2",
     "ember-data": "~3.28.0",
@@ -60,9 +63,11 @@
     "eslint-plugin-qunit": "^6.2.0",
     "loader.js": "^4.7.0",
     "npm-run-all": "^4.1.5",
+    "postcss-import": "^14.0.2",
     "prettier": "^2.3.2",
     "qunit": "^2.16.0",
     "qunit-dom": "^1.6.0",
+    "tailwindcss": "^2.2.19",
     "webpack": "^5.64.4"
   },
   "engines": {
